Got rid of the collectors earning page, Changed the collector take photo to view photo

--- a/mobile_dev/web/index.html
+++ b/mobile_dev/web/index.html
@@ -21,8 +21,7 @@
   <meta name="description" content="A new Flutter project.">
 
   <!-- Add this line with your actual Web Client ID -->
-  <meta name="google-signin-client_id"
-    content="YOUR_NEW_WEB_CLIENT_ID.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="268312084234-sgtra1lbo1ta38vd1cmp3vt517olda8a.apps.googleusercontent.com">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
